--- a/configs/video_model/Wan2.1-i2v-14Bsc-pose-xc-latent.yaml
+++ b/configs/video_model/Wan2.1-i2v-14Bsc-pose-xc-latent.yaml
@@ -85,28 +85,19 @@ model:
             legacy_ucg_val: ""
             target: sgm.modules.encoders.umt5.T5EncoderModel
             params:
-              checkpoint_path: /workspace/ckpt/official_pretrains/umt5-xxl/models_t5_umt5-xxl-enc-bf16.pth
-              tokenizer_path: /workspace/ckpt/official_pretrains/umt5-xxl
+              checkpoint_path: ckpt/umt5-xxl/models_t5_umt5-xxl-enc-bf16.pth
+              tokenizer_path: ckpt/umt5-xxl
               max_length: 512
-
-      #     - is_trainable: false
-      #       input_key: txt
-      #       ucg_rate: 0
-      #       target: sgm.modules.encoders.modules.FrozenSiglipEmbedder
-      #       params:
-      #         cache_dir: /workspace/ckpt/official_pretrains/
-      # cor_embs: [0, 1]
-      # cor_p: [0.9, 0, 0, 0.1] # 对应于:00, 10, 01, 11, 1表示用uncond, 0表示用cond
 
   i2v_clip_config:
     target: sgm.modules.encoders.clip.CLIPModel
     params:
-      checkpoint_path: /workspace/ckpt/official_pretrains/models_clip_open-clip-xlm-roberta-large-vit-huge-14-onlyvisual.pth
+      checkpoint_path: ckpt/models_clip_open-clip-xlm-roberta-large-vit-huge-14-onlyvisual.pth
 
   first_stage_config:
     target : sgm.models.wan_vae.WanVAE
     params:
-      vae_pth: /workspace/ckpt/official_pretrains/Wan2.1_VAE.pth
+      vae_pth: ckpt/Wan2.1_VAE.pth
       dtype: torch.bfloat16
 
   loss_fn_config:
