--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
-diffusers>=0.30.1 #git+https://github.com/huggingface/diffusers.git@main#egg=diffusers is suggested
-transformers>=4.44.2  # The development team is working on version 4.44.2
-accelerate>=0.33.0 #git+https://github.com/huggingface/accelerate.git@main#egg=accelerate is suggested
-sentencepiece>=0.2.0 # T5 used
-# SwissArmyTransformer>=0.4.12 
-numpy==1.26.0
-torch>=2.4.0 # Tested in 2.2 2.3 2.4 and 2.5, The development team is working on version 2.4.0.
-torchvision>=0.19.0 # The development team is working on version 0.19.0.
-gradio>=4.42.0 # For HF gradio demo
-streamlit>=1.38.0 # For streamlit web demo
-openai>=1.42.0 # For prompt refiner
+setuptools>=80.9.0
+diffusers>=0.35.2
+transformers>=4.57.3
+accelerate>=1.12.0
+sentencepiece>=0.2.1
+numpy==1.26.4
+torch>=2.9.1
+torchvision>=0.24.1
+gradio>=6.0.2
+streamlit>=1.52.0
+openai>=2.9.0
+omegaconf>=2.3.0
+einops>=0.8.1
+pytorch_lightning>=2.6.0
+scipy>=1.16.3
+beartype>=0.22.8
+braceexpand>=0.1.7
+webdataset>=1.0.2
+deepspeed>=0.18.2
+wandb>=0.23.1
+tensorboardX>=2.6.4
+datasets>=4.4.1
+ftfy>=6.3.1
+
 # Video IO dependencies
-moviepy==1.0.3
-pillow==9.5.0
-av>=12.0.0             # PyAV
-imageio==2.34.2 # For diffusers inference export video
-imageio-ffmpeg==0.5.1 # For diffusers inference export video
-decord>=0.6.0          # Decord for fast video reading
+moviepy>=2.2.1
+pillow>=11.3.0
+av>=16.0.1
+imageio>=2.34.2
+imageio-ffmpeg>=0.6.0
+decord>=0.6.0
